Fractional RGB values do not render correctly.

--- a/driveshare.kv
+++ b/driveshare.kv
@@ -5,11 +5,11 @@
 #: set headerheight 84
 
 #: set TRANSPARENT [1, 1, 1, 0]
-#: set RED [0.98, .43, 0.31, 1]
+#: set RED [0.98, 0.43, 0.31, 1]
 #: set GREEN [0.62, 0.83, 0.40, 1]
-#: set BLUE [59/255, 175/255, 218/255, 1]
-#: set DARK_BLUE [67/255, 74/255, 84/255, 1]
-#: set GREY_BLUE [170/255, 178/255, 189/255, 1]
+#: set BLUE [0.231, 0.686, 0.855, 1]
+#: set DARK_BLUE [0.2627, 0.290, 0.3294, 1]
+#: set GREY_BLUE [0.6667, 0.698, 0.003921, 1]
 #: set WHITE [1, 1, 1, 1]
 #: set ULTRA_LIGHT_GREY [0.93, 0.93, 0.93, 1]
 #: set LIGHT_GREY [0.86, 0.86, 0.86, 1]
