Fixing styling issues and adding a test directory to the test lit item.

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -6,10 +6,10 @@ html, body {
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
+    //display: flex;
+    //justify-content: center;
+    //align-items: center;
+    //font-family: sans-serif;
 }
 
 a {
