Adding FontAwesome to lib dir, cleaning up odds and ends in the UI.

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -16,8 +16,17 @@ a {
     text-decoration: none;
 }
 
-.container {
+.header {
+	height: 100px;
     text-align: center;
+}
+
+.w2ui-toolbar {
+	height: 30px;
+}
+
+.w2ui-grid-toolbar {
+	height: 30px;
 }
 
 .subtitle {
