Removed 'addDirectory' popup, added datashareDirectory and datashareSize options to preferences dialog.

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,34 +1,34 @@
 html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    //display: flex;
-    //justify-content: center;
-    //align-items: center;
-    //font-family: sans-serif;
+	//display: flex;
+	//justify-content: center;
+	//align-items: center;
+	//font-family: sans-serif;
 }
 
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .header {
 	height: 100px;
-    text-align: center;
+	text-align: center;
 }
 
-.w2ui-toolbar {
-	height: 30px;
+.w2ui-grid .w2ui-grid-header {
+	height: 40px;
 }
 
-.w2ui-grid-toolbar {
-	height: 30px;
+.w2ui-grid .w2ui-grid-body {
+	top: 40px;
 }
 
 .subtitle {
-    color: gray;
+	color: gray;
 }
