--- a/app/lib/css/style.css
+++ b/app/lib/css/style.css
@@ -122,7 +122,7 @@ header {
 .links {
   padding-top: 4px; }
 
-#storage-unit {
+#size-unit {
   font-family: "Montserrat", sans-serif;
   color: #2683FF;
   letter-spacing: 1px; }
