--- a/app/lib/css/style.sass
+++ b/app/lib/css/style.sass
@@ -178,14 +178,12 @@ footer
 	-webkit-animation-delay: -0.8s
 	animation-delay: -0.8s
 
-
 @-webkit-keyframes sk-stretchdelay
 	0%, 40%, 100%
 		-webkit-transform: scaleY(0.4)
 
 	20%
 		-webkit-transform: scaleY(1)
-
 
 @keyframes sk-stretchdelay
 	0%, 40%, 100%
@@ -195,3 +193,24 @@ footer
 	20%
 		transform: scaleY(1)
 		-webkit-transform: scaleY(1)
+
+
+
+// Modals
+
+.modal
+	top: 5em
+
+.modal-body
+	padding: 2em 1em
+
+.modal-footer
+	text-align: center
+	
+.modal-footer .btn
+	margin: 1em
+	padding: 1em
+
+.spinner-modal
+	display: block
+	margin-bottom: 21px
