--- a/app/lib/css/style.sass
+++ b/app/lib/css/style.sass
@@ -1,10 +1,3 @@
-@mixin transition($args...)
-	-webkit-transition: $args
-	-moz-transition: $args
-	-ms-transition: $args
-	-o-transition: $args
-	transition: $args
-
 // Variables
 
 $mont: "Montserrat", sans-serif
@@ -42,9 +35,6 @@ h1, h2, h3, h4, h5, h6
 
 h1, h2, h3, h4, h5, h6, p, span, blockquote, footer
 	-webkit-font-feature-settings: 'kern' 1
-	-moz-font-feature-settings: 'kern' 1
-	-ms-font-feature-settings: 'kern' 1
-	-o-font-feature-settings: 'kern' 1
 	font-feature-settings: 'kern' 1
 	text-rendering: optimizelegibility
 	font-kerning: normal
@@ -69,7 +59,8 @@ header
 
 .nav-tabs>li>a
 	margin-right: 6px
-	@include transition(all .2s ease)
+	-webkit-transition: all 0.2 ease
+	transition: all 0.2 ease
 	&:hover, &:focus
 		background-color: $blue
 		border-color: $blue
@@ -100,7 +91,8 @@ header
 	position: relative
 	background-color: $green
 	border: 2px solid $green
-	@include transition(all .2s ease)
+	-webkit-transition: all 0.2 ease
+	transition: all 0.2 ease
 	&:hover
 		color: #fff
 		background: lighten($green,5%)
@@ -129,14 +121,6 @@ header
 		border-color: $blue
 	&:focus
 		color: $blue
-
-.btn-red
-	background: transparent
-	border: 2px solid $red
-	color: $red
-	&:hover
-		background: $red
-		color: #fff
 
 #size-unit
 	font-family: $mont
