--- a/app/lib/css/style.sass
+++ b/app/lib/css/style.sass
@@ -204,3 +204,16 @@ footer
 .spinner-modal
 	display: block
 	margin-bottom: 21px
+
+#modalLogs
+	top: 0
+	.modal-body
+		padding: 0
+	#modalLogsCode
+		border: 0
+		margin: 0
+		padding: 1.5em
+		font-size: 12px
+		line-height: 18px
+		min-height: 375px
+
