--- a/app/lib/css/style.sass
+++ b/app/lib/css/style.sass
@@ -51,11 +51,15 @@ header
 	padding: 1em 0 2em
 
 .main
-	padding-top: 1em
+	// padding-top: 1em
 	&.disabled
 		opacity: 0.5
 		pointer-events: none
 		cursor: default
+
+.tab-list
+	margin-bottom: 1em
+	display: none
 
 .nav-tabs>li>a
 	margin-right: 6px
