--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,78 +1,103 @@
 html,
 body {
   height: 100%;
-  background-color: #fff; }
+  background-color: #fff;
+}
 
 body {
   font-family: "Lato", sans-serif;
-  line-height: 26px; }
-  @media only screen and (min-width: 480px) and (max-width: 600px) {
-    body {
-      padding: 0 1.5em; } }
-  @media only screen and (min-width: 600px) and (max-width: 768px) {
-    body {
-      padding: 0 3em; } }
+  line-height: 26px;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 600px) {
+  body {
+    padding: 0 1.5em;
+  }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+  body {
+    padding: 0 3em;
+  }
+}
 
 input {
-  font-weight: 300; }
+  font-weight: 300;
+}
 
 label {
   font-size: 15px;
-  padding-bottom: 4px; }
+  padding-bottom: 4px;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
-  color: #2683FF; }
+  color: #2683FF;
+}
 
 h1, h2, h3, h4, h5, h6, p, span, blockquote, footer {
   -webkit-font-feature-settings: "kern" 1;
   font-feature-settings: "kern" 1;
   text-rendering: optimizelegibility;
-  font-kerning: normal; }
+  font-kerning: normal;
+}
 
 a {
-  color: #2683FF; }
-  a:hover, a:focus {
-    color: #0068f2;
-    text-decoration: none;
-    border-bottom: 1px dashed #0068f2;
-    outline: 0; }
+  color: #2683FF;
+}
+
+a:hover, a:focus {
+  color: #0068f2;
+  text-decoration: none;
+  border-bottom: 1px dashed #0068f2;
+  outline: 0;
+}
 
 header {
-  padding: 1em 0 2em; }
+  padding: 1em 0 2em;
+}
 
 .main.disabled {
   opacity: 0.5;
   pointer-events: none;
-  cursor: default; }
+  cursor: default;
+}
 
 .tab-list {
-    margin-bottom: 1em;
-  }
+  margin-bottom: 1em;
+}
 
 .nav-tabs > li > a {
   margin-right: 6px;
   -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease; }
-  .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
-    background-color: #2683FF;
-    border-color: #2683FF;
-    color: #fff; }
+  transition: all 0.2s ease;
+}
+
+.nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
+  background-color: #2683FF;
+  border-color: #2683FF;
+  color: #fff;
+}
 
 .form-control {
   box-shadow: none;
   background: #f9f9f9;
   height: 36px;
   background-color: #fff;
-  border: 2px solid #ddd; }
+  border: 2px solid #ddd;
+}
 
 .form-group {
-  margin: 1em auto; }
+  margin: 1em auto;
+}
 
 .pull-right {
-  line-height: 28px; }
-  .pull-right p {
-    margin: 0; }
+  line-height: 28px;
+}
+
+.pull-right p {
+  margin: 0;
+}
 
 .btn {
   font-family: "Montserrat", sans-serif;
@@ -87,21 +112,30 @@ header {
   background-color: #88C425;
   border: 2px solid #88C425;
   -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease; }
-  .btn:hover {
+  transition: all 0.2s ease;
+}
+
+.btn:hover {
+  color: #fff;
+  background: #96d72b;
+  border-color: #96d72b;
+  outline: 0;
+}
+
+  .btn:hover:focus {
     color: #fff;
-    background: #96d72b;
-    border-color: #96d72b;
-    outline: 0; }
-    .btn:hover:focus {
-      color: #fff;
-      outline: 0; }
-  .btn:focus {
-    color: #fff;
-    outline: 0; }
-  .btn:active {
-    color: #fff;
-    outline: 0; }
+    outline: 0;
+  }
+
+.btn:focus {
+  color: #fff;
+  outline: 0;
+}
+
+.btn:active {
+  color: #fff;
+  outline: 0;
+}
 
 .btn-blue {
   font-size: 13px;
@@ -109,31 +143,41 @@ header {
   border: 2px solid #2683FF;
   margin: 0;
   background: transparent;
-  color: #2683FF; }
-  .btn-blue:hover {
-    color: #fff;
-    background: #2683FF;
-    border-color: #2683FF; }
-  .btn-blue:focus {
-    color: #2683FF; }
+  color: #2683FF;
+}
+
+.btn-blue:hover {
+  color: #fff;
+  background: #2683FF;
+  border-color: #2683FF;
+}
+
+.btn-blue:focus {
+  color: #2683FF;
+}
 
 #size-unit {
   font-family: "Montserrat", sans-serif;
   color: #2683FF;
-  letter-spacing: 1px; }
+  letter-spacing: 1px;
+}
 
 footer {
   padding: 0.5em 0 1em;
-  font-weight: 300; }
-  footer p {
-    text-transform: uppercase;
-    font-size: 12px;
-    letter-spacing: 1px; }
+  font-weight: 300;
+}
+
+footer p {
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1px;
+}
 
 .spinner {
   display: none;
   margin-top: 21px;
-  height: 30px; }
+  height: 30px;
+}
 
 .spinner > div {
   background-color: #88C425;
@@ -141,66 +185,87 @@ footer {
   width: 6px;
   display: inline-block;
   -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-  animation: sk-stretchdelay 1.2s infinite ease-in-out; }
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
 
 .spinner .rect2 {
   -webkit-animation-delay: -1.1s;
-  animation-delay: -1.1s; }
+  animation-delay: -1.1s;
+}
 
 .spinner .rect3 {
   -webkit-animation-delay: -1s;
-  animation-delay: -1s; }
+  animation-delay: -1s;
+}
 
 .spinner .rect4 {
   -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s; }
+  animation-delay: -0.9s;
+}
 
 .spinner .rect5 {
   -webkit-animation-delay: -0.8s;
-  animation-delay: -0.8s; }
+  animation-delay: -0.8s;
+}
 
 @-webkit-keyframes sk-stretchdelay {
   0%, 40%, 100% {
-    -webkit-transform: scaleY(0.4); }
+    -webkit-transform: scaleY(0.4);
+  }
   20% {
-    -webkit-transform: scaleY(1); } }
+    -webkit-transform: scaleY(1);
+  }
+}
+
 @keyframes sk-stretchdelay {
   0%, 40%, 100% {
     transform: scaleY(0.4);
-    -webkit-transform: scaleY(0.4); }
+    -webkit-transform: scaleY(0.4);
+  }
   20% {
     transform: scaleY(1);
-    -webkit-transform: scaleY(1); } }
+    -webkit-transform: scaleY(1);
+  }
+}
+
 .modal {
-  top: 5em; }
+  top: 5em;
+}
 
 .modal-body {
-  padding: 2em 1em; }
+  padding: 2em 1em;
+}
 
 .modal-footer {
-  text-align: center; }
+  text-align: center;
+}
 
 .modal-footer .btn {
   margin: 1em;
-  padding: 1em; }
+  padding: 1em;
+}
 
 .spinner-modal {
   display: block;
-  margin-bottom: 21px; }
+  margin-bottom: 21px;
+}
 
 #modalLogs {
-  top: 0; }
-  #modalLogs .modal-body {
-    padding: 0; }
-  #modalLogs #modalLogsCode {
-    border: 0;
-    margin: 0;
-    padding: 1.5em;
-    font-size: 12px;
-    line-height: 18px;
-    min-height: 375px; }
+  top: 0;
+}
 
-/*# sourceMappingURL=style.css.map */
+#modalLogs .modal-body {
+  padding: 0;
+}
+
+#modalLogs #modalLogsCode {
+  border: 0;
+  margin: 0;
+  padding: 1.5em;
+  font-size: 12px;
+  line-height: 18px;
+  min-height: 375px;
+}
 
 .fa {
   display: inline-block;
@@ -215,4 +280,14 @@ footer {
 .fa-close:before,
 .fa-times:before {
   content: "\f00d";
+}
+
+.stop {
+  background-color: #FFA500;
+  border-color: #FFA500;
+}
+
+.stop:hover {
+  background-color: #ffbd44;
+  border-color: #ffbd44;
 }
