fix fouc on initial load

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -302,3 +302,12 @@ footer p {
 .passwd-linux-btn {
   padding: 12px;
 }
+
+.container {
+  opacity: 0;
+}
+
+.container.visible {
+  opacity: 1;
+  transition: opacity .25s ease-in-out;
+}
