--- a/app/css/style.css
+++ b/app/css/style.css
@@ -347,6 +347,12 @@ footer a:hover {
   color: red;
 }
 
-.nav {
-  margin-left: 17px;
+.dropdown-menu>span{
+  display:block;
+  padding:3px 20px;
+  clear:both;
+  font-weight:400;
+  line-height:1.42857143;
+  color:#333;
+  white-space:nowrap
 }
