Rework UI, remove logs view

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -439,3 +439,11 @@ footer a:hover {
   text-decoration: none;
   cursor: pointer;
 }
+
+.progress {
+  height: 36px;
+  margin-bottom: 0;
+}
+.progress-bar {
+  line-height: 36px;
+}
