--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -124,12 +124,12 @@ input:active, input:focus {
 .storage-slider {
 }
 .range-slider {
-  margin: 20px 0 20px 0%;
+  margin: 20px 0 0 0%;
   width: 100%;
 }
 .range-slider__range {
   -webkit-appearance: none;
-  width: calc(100% - (73px));
+  width: 100%;
   height: 12px;
   border-radius: 5px;
   background: #fff;
@@ -161,28 +161,10 @@ input:active, input:focus {
 .range-slider__range:active::-webkit-slider-thumb {
   background: #7ED321;
 }
-
 .range-slider__value {
-  display: inline-block;
-  position: relative;
-  width: 60px;
-  color: #fff;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 3px;
-  background: #7ED321;
-  padding: 5px 10px;
-  margin-left: 8px;
+  font-weight: 700;
 }
-.range-slider__value:after {
-  position: absolute;
-  top: 8px;
-  left: -7px;
-  width: 0;
-  height: 0;
-  border-top: 7px solid transparent;
-  border-right: 7px solid #7ED321;
-  border-bottom: 7px solid transparent;
-  content: '';
+.range-slider__info {
+  font-size: 14px;
+  color: #444;
 }
-
