--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -130,8 +130,8 @@ input:active, input:focus {
 .range-slider__range {
   -webkit-appearance: none;
   width: 100%;
-  height: 12px;
-  border-radius: 5px;
+  height: 14px;
+  border-radius: 10px;
   background: #fff;
   background: linear-gradient(90deg,#7ED321 50%,#fff 50%);
   border: 1px solid #ddd;
@@ -145,14 +145,23 @@ input:active, input:focus {
 .range-slider__range::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 28px;
+  height: 28px;
   border-radius: 50%;
-  background: #eee;
-  border: 1px solid #ccc;
+  background: #fff;
+  border: 1px solid #D5D5D5;
   cursor: pointer;
   -webkit-transition: background .15s ease-in-out;
   transition: background .15s ease-in-out;
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.16);
+}
+.range-slider__range::-webkit-slider-thumb:after {
+  content: 'II';
+  font-size: 11px;
+  color: #444;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 .range-slider__range::-webkit-slider-thumb:hover {
   background: #7ED321;
@@ -162,9 +171,11 @@ input:active, input:focus {
   background: #7ED321;
 }
 .range-slider__value {
-  font-weight: 700;
+  color: #444;
 }
 .range-slider__info {
+  text-transform: uppercase;
+  font-weight: 700;
   font-size: 14px;
-  color: #444;
+  color: #ccc;
 }
