removing popping css between page transitions

--- a/app/css/animations.css
+++ b/app/css/animations.css
@@ -2,5 +2,9 @@
   transition: opacity .25s ease-in-out;
 }
 .fade-enter, .fade-leave-to /* .fade-leave-active in <2.1.8 */ {
-  opacity: 0
+  opacity: 0;
+}
+
+.fade-leave-to {
+  display: none;
 }
