--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -48,14 +48,14 @@ a:hover, a:focus {
   text-align: center;
   width: 140px;
   -webkit-user-select: none;
-  user-select: none; 
+  user-select: none;
 }
 .logo-horizontal {
   display: block;
   margin: 1em 0;
   width: 190px;
   -webkit-user-select: none;
-  user-select: none; 
+  user-select: none;
 }
 
 .btn {
@@ -159,43 +159,53 @@ input:active, input:focus {
 /*
     Wizard Storage Size Slider
  */
+.storage-slider input[type=range]{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 14px;
+    border-radius: 10px;
+    background: #fff;
+    background: linear-gradient(90deg,#7ED321 50%,#fff 50%);
+    border: 1px solid #ddd;
+    outline: none;
+    padding: 0;
+    margin: 0;
+}
 
+.storage-slider input[type=range]::-webkit-slider-runnable-track {
+    width: 300px;
+    height: 5px;
+    background: #ddd;
+    border: none;
+    border-radius: 3px;
+}
 
-.storage-slider {
+.storage-slider input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    background: #fff;
+    border: 1px solid #D5D5D5;
+    cursor: pointer;
+    -webkit-transition: background .15s ease-in-out;
+    transition: background .15s ease-in-out;
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.16);
+    margin-top: -10px;
 }
-.range-slider {
-  margin: 20px 0 0 0%;
-  width: 100%;
+
+.storage-slider input[type=range]:focus, .storage-slider input[type=range]:active {
+    outline: none;
+    border: 1px solid #ddd;
 }
-.range-slider__range {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 14px;
-  border-radius: 10px;
-  background: #fff;
-  background: linear-gradient(90deg,#7ED321 50%,#fff 50%);
-  border: 1px solid #ddd;
-  outline: none;
-  padding: 0;
-  margin: 0;
+
+.storage-slider input[type=range]::-webkit-slider-thumb:hover, .storage-slider input[type=range]::-webkit-slider-thumb:active {
+  background: #7ED321;
+  border: 1px solid #7ED321;
 }
-.range-slider__range:active, .range-slider__range:focus {
-  border: 1px solid #ddd;
-}
-.range-slider__range::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 28px;
-  height: 28px;
-  border-radius: 50%;
-  background: #fff;
-  border: 1px solid #D5D5D5;
-  cursor: pointer;
-  -webkit-transition: background .15s ease-in-out;
-  transition: background .15s ease-in-out;
-  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.16);
-}
-.range-slider__range::-webkit-slider-thumb:after {
+
+.storage-slider input[type=range]::-webkit-slider-thumb:after {
   content: 'II';
   font-size: 11px;
   color: #444;
@@ -203,13 +213,18 @@ input:active, input:focus {
   top: 0;
   right: 0;
 }
-.range-slider__range::-webkit-slider-thumb:hover {
-  background: #7ED321;
-  border: 1px solid #7ED321;
+
+/*
+.storage-slider input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
 }
-.range-slider__range:active::-webkit-slider-thumb {
-  background: #7ED321;
+*/
+.range-slider {
+  margin: 20px 0 0 0%;
+  width: 100%;
 }
+
+
 .range-slider__value {
   color: #444;
 }
@@ -296,4 +311,10 @@ nav {
 .footer a {
   color: #aaa;
   border-color: #aaa;
+}
+
+.error-stream {
+  z-index: 1000;
+  position: fixed;
+  width: 100%;
 }
