--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -143,12 +143,21 @@ input {
   min-width: 360px;
   font-family: "Open Sans", sans-serif;
 }
+input:hover {
+  border: 1px solid #ddd;
+}
 input:active, input:focus {
   border: 1px solid #2683ff;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+::-webkit-input-placeholder {
   color: #ddd;
+}
+
+
+input[type="file"] {
+  letter-spacing: 0px;
+  color: #777;
 }
 
 .port-number {
