--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -243,7 +243,7 @@ input[type="file"] {
   margin-left: 0.4rem;
   display: inline-block;
   width: 3.5rem;
-  height: 1.5rem;
+  height: 1.5rem !important;
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
   font-size: 14px;
