Update error stream, add close icon

--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -341,7 +341,8 @@ nav {
   position: fixed;
   width: 100%;
   border-radius: 0;
-  padding: 1em 2em;
+  border: 0;
+  padding: 1em 2em 0;
 }
 .close {
   border: 0;
