style fix, adding checks & creation of non-existent files and dirs for config generation, mkdirp, adding share json template

--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -74,7 +74,7 @@ a:hover, a:focus {
   min-width: 160px;
   cursor: pointer;
 }
-.btn:hover {
+.btn:hover, .btn:hover a{
   color: #fff;
   background: #96d72b;
   border-color: #96d72b;
