Make modals scroll - fix terms modal

--- a/app/css/style_new.css
+++ b/app/css/style_new.css
@@ -370,3 +370,7 @@ nav {
 .modal.fade.show {
   background: rgba(0,0,0,0.5);
 }
+.modal-body{
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
+}
