Add node status loading animation

--- a/app/css/animations.css
+++ b/app/css/animations.css
@@ -8,3 +8,20 @@
 .fade-leave-to {
   display: none;
 }
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to { 
+        transform: rotate(360deg);
+    }
+}
+@-webkit-keyframes rotate {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to { 
+        -webkit-transform: rotate(360deg);
+    }
+}
